plugins {
    id 'java'
    id "org.sonarqube" version "4.0.0.2929"
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'groovy'
    apply plugin: 'jvm-test-suite'
    apply plugin: 'jacoco'

    bsvclGroup = "$bsvclGroup"
    bsvclVersion = "$bsvclVersion"

    group = "$rootProject.bsvclGroup"
    version = "$rootProject.bsvclVersion"

    repositories {
        mavenCentral()
        mavenLocal()
    }

    sourceCompatibility = "17"
    targetCompatibility = "17"

    dependencies {
        implementation 'org.slf4j:slf4j-api:1.7.26'

        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
        testImplementation 'org.apache.groovy:groovy'
        testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'
        testImplementation 'ch.qos.logback:logback-classic:1.2.9'
    }

    testing {
        suites {
            test {
                useJUnitJupiter()
            }

            integrationTest(JvmTestSuite) {
                dependencies {
                    implementation project()
                    implementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
                    runtimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
                    implementation 'org.apache.groovy:groovy'
                    implementation 'org.spockframework:spock-core:2.3-groovy-4.0'
                    implementation 'ch.qos.logback:logback-classic:1.2.9'
                }

                targets {
                    all {
                        testTask.configure {
                            shouldRunAfter(test)
                        }
                    }
                }
            }
        }
    }

    tasks.named('check') {
        dependsOn(testing.suites.integrationTest)
    }

    jacoco {
        toolVersion = "0.8.8"
    }

    jacocoTestReport {
        reports {
            xml.required = true
            csv.required = false
        }
        dependsOn test
    }

    test {
        finalizedBy jacocoTestReport
    }

    sonar {
        properties {
            property "sonar.projectKey", "bitcoin-sv_bsv-components-library"
            property "sonar.organization", "bitcoin-sv"
            property "sonar.host.url", "https://sonarcloud.io"
        }
    }
}

